# QRCode

./: CMakeLists.txt  README.md  parse.cc  zbar.cc  zbar.h  zxing.cc
3rd/zbar/lib/: libzbar.so.0
base/: Copyable.h  LogStream.h  NonCopyable.h  TimeZone.cc  TimeZone.h  Timestamp.h  log.h  qrParseImpl.h  types.h
include/: types.h  zxing.h
src/: parse.cc  parse.h  zbar.cc  zxing.cc
tests/: CMakeLists.txt  main.cc
